feat: tianxuan-search服务

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>tianxuan-company</module>
         <module>tianxuan-gateway</module>
         <module>tianxuan-auth</module>
+        <module>tianxuan-search</module>
     </modules>
 
     <properties>
