--- a/pom.xml
+++ b/pom.xml
@@ -107,11 +107,11 @@
             </dependency>
 
 
-            <!--<dependency>-->
-            <!--<groupId>com.squareup.okhttp3</groupId>-->
-            <!--<artifactId>okhttp</artifactId>-->
-            <!--<version>4.2.2</version>-->
-            <!--</dependency>-->
+            <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.2.2</version>
+            </dependency>
 
             <!-- jackson -->
             <dependency>
