--- a/tianxuan-gateway/src/main/resources/bootstrap.yml
+++ b/tianxuan-gateway/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: ${NACOS_HOST:192.168.43.105}:${NACOS_PORT:32228}
+        server-addr: ${NACOS_HOST:nacos.local.wuyiccc.com}:${NACOS_PORT:12051}
         namespace: ${NACOS_NAMESPACE:tianxuan_dev}
         file-extension: yml
         shared-configs:
