--- a/tianxuan-search/pom.xml
+++ b/tianxuan-search/pom.xml
@@ -19,13 +19,41 @@
     </properties>
 
 
-
     <dependencies>
         <dependency>
             <groupId>com.wuyiccc</groupId>
             <artifactId>tianxuan-api</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.squareup.okhttp</groupId>
+                    <artifactId>okhttp</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.jvm123</groupId>-->
+<!--            <artifactId>minio-spring-boot-starter</artifactId>-->
+<!--            <version>1.2.1</version>-->
+
+<!--        </dependency>-->
+
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.3.5</version>
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <artifactId>okhttp</artifactId>-->
+<!--                    <groupId>com.squareup.okhttp3</groupId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
+        </dependency>
+
+
+
+
     </dependencies>
 
 
