--- a/tianxuan-common/pom.xml
+++ b/tianxuan-common/pom.xml
@@ -36,6 +36,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
 
         <!--引入nacos注册中心-->
         <dependency>
