--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,12 @@
                 <artifactId>ffmpeg-platform</artifactId>
                 <version>4.1.3-1.5.1</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-client</artifactId>
+                <version>4.9.7</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
