--- a/tianxuan-common/pom.xml
+++ b/tianxuan-common/pom.xml
@@ -174,6 +174,11 @@
             <version>2.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
