--- a/tianxuan-gateway/src/main/resources/bootstrap.yml
+++ b/tianxuan-gateway/src/main/resources/bootstrap.yml
@@ -12,3 +12,5 @@ spring:
             refresh: true
           - data-id: jwt.yml
             refresh: true
+          - data-id: redis.yml
+            refresh: true
