--- a/tianxuan-user/src/main/resources/bootstrap.yml
+++ b/tianxuan-user/src/main/resources/bootstrap.yml
@@ -10,3 +10,5 @@ spring:
         shared-configs:
           - data-id: tianxuan-user.yml
             refresh: true
+          - data-id: db.yml
+            refresh: true
