--- a/tianxuan-auth/src/main/resources/bootstrap.yml
+++ b/tianxuan-auth/src/main/resources/bootstrap.yml
@@ -18,3 +18,5 @@ spring:
             refresh: true
           - data-id: redis.yml
             refresh: true
+          - data-id: rocketmq.yml
+            refresh: true
