--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,12 @@
                 <artifactId>rocketmq-client</artifactId>
                 <version>4.9.7</version>
             </dependency>
+
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>5.8.18</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
