--- a/tianxuan-common/pom.xml
+++ b/tianxuan-common/pom.xml
@@ -92,6 +92,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
+        <!--jasypt加解密-->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
