feat: 初始化用户简历

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>tianxuan-gateway</module>
         <module>tianxuan-auth</module>
         <module>tianxuan-search</module>
+        <module>tianxuan-work</module>
     </modules>
 
     <properties>
