feat: open-feign远程调用

--- a/tianxuan-common/pom.xml
+++ b/tianxuan-common/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
 
+        <!--引入openfeign-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <!--引入客户端负载均衡器loadbalancer-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
