--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,12 @@
                 <artifactId>hutool-all</artifactId>
                 <version>5.8.18</version>
             </dependency>
+
+            <dependency>
+                <groupId>io.seata</groupId>
+                <artifactId>seata-spring-boot-starter</artifactId>
+                <version>1.5.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
