feat: seata分布式事务使用

--- a/tianxuan-auth/src/main/resources/bootstrap.yml
+++ b/tianxuan-auth/src/main/resources/bootstrap.yml
@@ -20,3 +20,5 @@ spring:
             refresh: true
           - data-id: rocketmq.yml
             refresh: true
+          - data-id: seata.yml
+            refresh: true
