--- a/tianxuan-search/src/main/resources/bootstrap.yml
+++ b/tianxuan-search/src/main/resources/bootstrap.yml
@@ -14,3 +14,5 @@ spring:
             refresh: true
           - data-id: db.yml
             refresh: true
+          - data-id: seata.yml
+            refresh: true
