--- a/tianxuan-user/src/main/resources/bootstrap.yml
+++ b/tianxuan-user/src/main/resources/bootstrap.yml
@@ -12,3 +12,5 @@ spring:
             refresh: true
           - data-id: db.yml
             refresh: true
+          - data-id: seata.yml
+            refresh: true
