feat: 新增文件服务模块

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>tianxuan-auth</module>
         <module>tianxuan-search</module>
         <module>tianxuan-work</module>
+        <module>tianxuan-file</module>
     </modules>
 
     <properties>
