--- a/tianxuan-file/pom.xml
+++ b/tianxuan-file/pom.xml
@@ -24,6 +24,18 @@
             <artifactId>tianxuan-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.3.5</version>
+            <!--            <exclusions>-->
+            <!--                <exclusion>-->
+            <!--                    <artifactId>okhttp</artifactId>-->
+            <!--                    <groupId>com.squareup.okhttp3</groupId>-->
+            <!--                </exclusion>-->
+            <!--            </exclusions>-->
+        </dependency>
     </dependencies>
 
 
