feat: 公司全名查询

--- a/tianxuan-company/src/main/resources/bootstrap.yml
+++ b/tianxuan-company/src/main/resources/bootstrap.yml
@@ -12,5 +12,7 @@ spring:
             refresh: true
           - data-id: db.yml
             refresh: true
+          - data-id: redis.yml
+            refresh: true
           - data-id: seata.yml
             refresh: true
