--- a/pom.xml
+++ b/pom.xml
@@ -240,6 +240,12 @@
                 <artifactId>seata-spring-boot-starter</artifactId>
                 <version>1.5.2</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>1.5.5.Final</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
