--- a/tianxuan-chat/pom.xml
+++ b/tianxuan-chat/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tianxuan-file</artifactId>
+    <artifactId>tianxuan-chat</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -18,33 +18,21 @@
     </properties>
 
     <dependencies>
+
+
         <dependency>
             <groupId>com.wuyiccc</groupId>
-            <artifactId>tianxuan-api</artifactId>
+            <artifactId>tianxuan-pojo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>io.minio</groupId>
-            <artifactId>minio</artifactId>
-            <version>8.3.5</version>
-            <!--            <exclusions>-->
-            <!--                <exclusion>-->
-            <!--                    <artifactId>okhttp</artifactId>-->
-            <!--                    <groupId>com.squareup.okhttp3</groupId>-->
-            <!--                </exclusion>-->
-            <!--            </exclusions>-->
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.25.Final</version>
         </dependency>
+
+
     </dependencies>
 
-
-    <build>
-        <finalName>${project.artifactId}</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 </project>
