--- a/tianxuan-resource/src/main/resources/bootstrap.yml
+++ b/tianxuan-resource/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: tianxuan-search
+    name: tianxuan-resource
   cloud:
     nacos:
       config:
@@ -8,11 +8,11 @@ spring:
         namespace: ${NACOS_NAMESPACE:tianxuan_dev}
         file-extension: yml
         shared-configs:
-          - data-id: tianxuan-search.yml
-            refresh: true
-          - data-id: minio.yml
+          - data-id: tianxuan-resource.yml
             refresh: true
           - data-id: db.yml
+            refresh: true
+          - data-id: redis.yml
             refresh: true
           - data-id: seata.yml
             refresh: true
