--- a/tianxuan-api/pom.xml
+++ b/tianxuan-api/pom.xml
@@ -41,6 +41,12 @@
 <!--            <artifactId>seata-spring-boot-starter</artifactId>-->
 <!--            <version>1.5.2</version>-->
 <!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.19.0</version>
+        </dependency>
     </dependencies>
 
 </project>
