--- a/tianxuan-work/src/main/resources/bootstrap.yml
+++ b/tianxuan-work/src/main/resources/bootstrap.yml
@@ -14,3 +14,5 @@ spring:
             refresh: true
           - data-id: seata.yml
             refresh: true
+          - data-id: redis.yml
+            refresh: true
