--- a/tianxuan-work/src/main/resources/bootstrap.yml
+++ b/tianxuan-work/src/main/resources/bootstrap.yml
@@ -16,3 +16,5 @@ spring:
             refresh: true
           - data-id: redis.yml
             refresh: true
+          - data-id: mongodb.yml
+            refresh: true
