--- a/tianxuan-resource/pom.xml
+++ b/tianxuan-resource/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>tianxuan-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
