--- a/tianxuan-resource/src/main/resources/bootstrap.yml
+++ b/tianxuan-resource/src/main/resources/bootstrap.yml
@@ -16,3 +16,5 @@ spring:
             refresh: true
           - data-id: seata.yml
             refresh: true
+          - data-id: zookeeper.yml
+            refresh: true
