--- a/tianxuan-api/pom.xml
+++ b/tianxuan-api/pom.xml
@@ -47,6 +47,13 @@
             <artifactId>redisson</artifactId>
             <version>3.19.0</version>
         </dependency>
+
+
+
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
