--- a/tianxuan-api/pom.xml
+++ b/tianxuan-api/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>curator-recipes</artifactId>
             <version>5.3.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
