--- a/tianxuan-auth/src/main/resources/bootstrap.yml
+++ b/tianxuan-auth/src/main/resources/bootstrap.yml
@@ -22,3 +22,5 @@ spring:
             refresh: true
           - data-id: seata.yml
             refresh: true
+          - data-id: sentinel.yml
+            refresh: true
