--- a/tianxuan-work/src/main/resources/bootstrap.yml
+++ b/tianxuan-work/src/main/resources/bootstrap.yml
@@ -18,3 +18,5 @@ spring:
             refresh: true
           - data-id: mongodb.yml
             refresh: true
+          - data-id: sentinel.yml
+            refresh: true
