--- a/tianxuan-gateway/src/main/resources/bootstrap.yml
+++ b/tianxuan-gateway/src/main/resources/bootstrap.yml
@@ -14,3 +14,5 @@ spring:
             refresh: true
           - data-id: redis.yml
             refresh: true
+          - data-id: sentinel.yml
+            refresh: true
