--- a/tianxuan-search/pom.xml
+++ b/tianxuan-search/pom.xml
@@ -24,35 +24,26 @@
             <groupId>com.wuyiccc</groupId>
             <artifactId>tianxuan-api</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.squareup.okhttp</groupId>
-                    <artifactId>okhttp</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.jvm123</groupId>-->
-<!--            <artifactId>minio-spring-boot-starter</artifactId>-->
-<!--            <version>1.2.1</version>-->
 
-<!--        </dependency>-->
-
+        <!-- es -->
         <dependency>
-            <groupId>io.minio</groupId>
-            <artifactId>minio</artifactId>
-            <version>8.3.5</version>
-<!--            <exclusions>-->
-<!--                <exclusion>-->
-<!--                    <artifactId>okhttp</artifactId>-->
-<!--                    <groupId>com.squareup.okhttp3</groupId>-->
-<!--                </exclusion>-->
-<!--            </exclusions>-->
+            <groupId>org.dromara.easy-es</groupId>
+            <artifactId>easy-es-boot-starter</artifactId>
+            <!--这里Latest Version是指最新版本的依赖,比如2.0.0,可以通过下面的图片获取-->
+            <version>2.0.0</version>
         </dependency>
-
-
-
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>7.14.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>7.14.0</version>
+        </dependency>
 
     </dependencies>
 
