--- a/tianxuan-file/pom.xml
+++ b/tianxuan-file/pom.xml
@@ -35,6 +35,26 @@
             <!--                </exclusion>-->
             <!--            </exclusions>-->
         </dependency>
+
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.5.9</version>
+        </dependency>
+
+        <!-- Additional dependencies required to use CUDA and cuDNN -->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>opencv-platform-gpu</artifactId>
+            <version>4.7.0-1.5.9</version>
+        </dependency>
+
+        <!-- Optional GPL builds with (almost) everything enabled -->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>ffmpeg-platform-gpl</artifactId>
+            <version>6.0-1.5.9</version>
+        </dependency>
     </dependencies>
 
 
